src/test/ui/codemap_tests/tab_2.rs
// ignore-tidy-tab

fn main() {
				"""; //~ ERROR unterminated double quote
}
